# lsv

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  bacon.toml  code_coverage.txt  rustfmt.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
docs/: README.md  architecture.md  command_palette.md  configuration.md  configuration_detailed.md  getting_started.md  keybindings.md  lua_integration.md  lv-config.md  troubleshooting.md
examples/config/: init.lua  marks
examples/config/lua/: emoji-icons.lua  icons.lua  nerdfont-icons.lua
examples/config/lua/themes/: catppuccin.lua  dark.lua  dracula.lua  everforest.lua  gruvbox.lua  horizon.lua  kanagawa.lua  light.lua  material_palenight.lua  monokai_pro.lua  nightfox.lua  nord.lua  oceanic_next.lua  one_light.lua  (+6 more)
examples/config/themes/: catppuccin.lua  dark.lua  dracula.lua  everforest.lua  gruvbox.lua  kanagawa.lua  light.lua  onedark.lua  solarized.lua  tokyonight.lua
scripts/: complexity.sh  coverage.sh  install-git-hooks.sh  test_flamegraph.sh
src/: actions.rs  app.rs  app_actions.rs  commands.rs  config.rs  config_data.rs  embed_examples.rs  enums.rs  input.rs  lib.rs  main.rs  runtime.rs  runtime_util.rs  util.rs
src/actions/: apply.rs  dispatcher.rs  effects.rs  internal.rs  lua_glue.rs  mod.rs
src/app/: commands.rs  keys.rs  marks.rs  nav.rs  overlays_api.rs  preview_ctrl.rs  selection.rs  state.rs
src/config/: defaults.rs  loader.rs  lsv_api.rs  lua_engine.rs  paths.rs  require.rs  theme.rs  types.rs
src/config/runtime/: data.rs  glue.rs  mod.rs
src/core/: fs_ops.rs  listing.rs  marks.rs  mod.rs  overlays.rs  selection.rs
src/keymap/: mod.rs
src/lsv/lua/: defaults.lua
src/lsv/src/: actions.rs  app.rs  app_actions.rs  config.rs  config_data.rs  input.rs  main.rs  runtime.rs  util.rs
src/lua/: defaults.lua
src/lv/: Cargo.toml
src/lv/src/: actions.rs  app.rs  config.rs  enums.rs  input.rs  main.rs
src/preview/: mod.rs
src/trace/: mod.rs
src/ui/: ansi.rs  colors.rs  format.rs  mod.rs  panes.rs  preview.rs  row.rs  template.rs
src/ui/overlays/: command.rs  confirm.rs  messages.rs  mod.rs  output.rs  prompt.rs  theme_picker.rs  whichkey.rs
src/ui/panes/: current.rs  layout.rs  mod.rs  parent.rs
tests/: commands.rs  config_paths.rs  core_fs_ops.rs  integration.rs  marks_binding.rs  marks_goto.rs  preview.txt  ui_colors_ansi.rs  ui_format.rs  ui_template.rs
(+9 files in other folders)
