[package]
name = "lsv"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
mlua = { version = "0.11.3", features = ["lua54", "vendored"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "libc"] }
unicode-width = "0.1"
whoami = "1"
