[package]
name = "lsv"
version = "0.1.14"
edition = "2024"
description = "Three‑pane terminal file viewer (TUI) with preview and Lua configuration"
license = "MIT"
readme = "README.md"
repository = "https://github.com/SecretDeveloper/lsv"
homepage = "https://github.com/SecretDeveloper/lsv"
documentation = "https://docs.rs/lsv"
keywords = ["tui", "terminal", "file", "preview"]
categories = ["command-line-utilities", "filesystem"]
rust-version = "1.90"
include = [
  "src/**",
  "tests/**",
  "src/actions/**",
  "src/lua/**",
  "src/ui/**",
  "examples/config/**",
  "README.md",
  "LICENSE",
]

[dependencies]
crossterm = "0.29.0"
ratatui = { version = "0.30.0", default-features = false, features = [
  "crossterm",
] }
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
chrono = { version = "0.4.44", default-features = false, features = [
  "clock",
  "std",
  "libc",
] }
unicode-width = "0.2.2"
whoami = "2.1.1"

[dev-dependencies]
tempfile = "3.26.0"

[profile.bench]
debug = true
